# frequenz-channels-python

./: .cookiecutter-replay.json  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_NOTES.md  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py  versions.json
.github/: dependabot.yml  keylabeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/containers/nox-cross-arch/: arm64-ubuntu-20.04-python-3.11.Dockerfile
.github/workflows/: ci.yaml
benchmarks/: benchmark_anycast.py  benchmark_broadcast.py
docs/: SUMMARY.md  index.md  mkdocstrings_autoapi.py
docs/_scripts/: macros.py
docs/user-guide/: SUMMARY.md  error-handling.md  installation.md  quick-start.md  sending.md
docs/user-guide/channels/: anycast.md  broadcast.md  index.md
docs/user-guide/receiving/: index.md
docs/user-guide/receiving/multiple-sources/: index.md  select.md
docs/user-guide/receiving/synchronization/: index.md  merge.md
docs/user-guide/utilities/: events.md  file-watchers.md  timers.md
latest-dev/user-guide/channels/: index.html
latest-dev/user-guide/channels/anycast/: index.html
latest-dev/user-guide/channels/broadcast/: index.html
latest-dev/user-guide/error-handling/: index.html
latest-dev/user-guide/installation/: index.html
latest-dev/user-guide/receiving/multiple-sources/: index.html
latest-dev/user-guide/receiving/synchronization/: index.html
latest-pre/_overrides/: main.html
latest-pre/reference/frequenz/channels/: index.html
latest-pre/user-guide/channels/anycast/: index.html
latest-pre/user-guide/channels/broadcast/: index.html
latest-pre/user-guide/quick-start/: index.html
latest-pre/user-guide/utilities/file-watchers/: index.html
latest-pre/user-guide/utilities/timers/: index.html
latest/CONTRIBUTING/: index.html
latest/SUMMARY/: index.html
latest/reference/conftest/: index.html
latest/reference/frequenz/channels/: index.html
next/: 404.html  index.html  objects.inv  sitemap.xml
next/CONTRIBUTING/: index.html
next/SUMMARY/: index.html
next/reference/SUMMARY/: index.html
next/reference/conftest/: index.html
next/reference/frequenz/channels/: index.html
next/search/: search_index.json
src/: conftest.py
src/frequenz/channels/: __init__.py  _anycast.py  _base_classes.py  _bidirectional.py  _broadcast.py  _exceptions.py  _generic.py  _merge.py  _merge_named.py  _receiver.py  _select.py  _sender.py  anycast.py  base_classes.py  bidirectional.py  broadcast.py  event.py  file_watcher.py  merge.py  merge_named.py  select.py  timer.py
src/frequenz/channels/util/: __init__.py  _event.py  _file_watcher.py  _merge.py  _merge_named.py  _periodic_timer.py  _select.py  _selector.py  _timer.py
src/frequenz/channels/utils/: __init__.py  file_watcher.py  timer.py
tests/: __init__.py  test_anycast.py  test_bidirectional.py  test_broadcast.py  test_event.py  test_file_watcher.py  test_file_watcher_integration.py  test_merge.py  test_merge_integration.py  test_mergenamed.py  test_select.py  test_select_integration.py  test_timer.py  test_timer_integration.py
tests/utils/: __init__.py  test_event.py  test_file_watcher.py  test_integration.py  test_periodic_timer.py  test_select_integration.py  test_selector.py  test_selector_integration.py  test_timer.py  test_timer_integration.py
v0-dev/: 404.html  index.html
v0-dev/CONTRIBUTING/: index.html
v0-dev/SUMMARY/: index.html
v0-dev/_overrides/: main.html
v0-dev/reference/SUMMARY/: index.html
v0-dev/reference/frequenz/channels/: index.html
v0.10/: 404.html  index.html
v0.10/reference/SUMMARY/: index.html
v0.10/reference/frequenz/channels/: index.html
v0.10/search/: search_index.json
v0.11/: 404.html
v0.11/CONTRIBUTING/: index.html
v0.11/SUMMARY/: index.html
v0.11/reference/SUMMARY/: index.html
v0.11/reference/frequenz/channels/: index.html
v0.12/: objects.inv
v0.12/SUMMARY/: index.html
v0.12/reference/SUMMARY/: index.html
v0.13/reference/frequenz/channels/: index.html
v0.14/: 404.html
v0.14/CONTRIBUTING/: index.html
v0.15/: 404.html  index.html  objects.inv
v0.15/CONTRIBUTING/: index.html
v0.15/SUMMARY/: index.html
v0.15/reference/SUMMARY/: index.html
v0.15/search/: search_index.json
v0.16/: 404.html  index.html  objects.inv
v0.16/CONTRIBUTING/: index.html
v0.16/SUMMARY/: index.html
v0.16/reference/SUMMARY/: index.html
v0.16/reference/conftest/: index.html
v0.16/search/: search_index.json
v0.17-dev/: 404.html
v0.17-dev/CONTRIBUTING/: index.html
v0.17-dev/_scripts/: mkdocstrings_autoapi.py
v0/overrides/: main.html
v0/reference/SUMMARY/: index.html
v0/reference/conftest/: index.html
v1-dev/user-guide/SUMMARY/: index.html
v1-dev/user-guide/quick-start/: index.html
v1-dev/user-guide/receiving/: index.html
v1-dev/user-guide/sending/: index.html
v1-pre/user-guide/SUMMARY/: index.html
v1-pre/user-guide/channels/: index.html
v1-pre/user-guide/error-handling/: index.html
v1-pre/user-guide/installation/: index.html
v1-pre/user-guide/receiving/: index.html
v1-pre/user-guide/sending/: index.html
v1.0-dev/: 404.html  index.html  objects.inv
v1.0-dev/CONTRIBUTING/: index.html
v1.0-dev/SUMMARY/: index.html
v1.0-dev/_scripts/: macros.py
v1.0-dev/reference/SUMMARY/: index.html
v1.0-dev/search/: search_index.json
v1.0-dev/user-guide/SUMMARY/: index.html
v1.0-dev/user-guide/channels/: index.html
v1.0-dev/user-guide/error-handling/: index.html
v1.0-dev/user-guide/installation/: index.html
v1.0-dev/user-guide/quick-start/: index.html
v1.0-dev/user-guide/receiving/: index.html
v1.0-dev/user-guide/sending/: index.html
v1.0-pre/: index.html  objects.inv
v1.0-pre/CONTRIBUTING/: index.html
v1.0-pre/_scripts/: macros.py
v1.0-pre/reference/SUMMARY/: index.html
v1.0-pre/search/: search_index.json
v1.0-pre/user-guide/error-handling/: index.html
v1.0-pre/user-guide/installation/: index.html
v1.0-pre/user-guide/quick-start/: index.html
v1.0-pre/user-guide/receiving/: index.html
v1.0-pre/user-guide/sending/: index.html
(+101 files in other folders)
