# License: MIT
# Copyright © 2022 Frequenz Energy-as-a-Service GmbH

[build-system]
requires = [
  "setuptools == 68.1.0",
  "setuptools_scm[toml] == 7.1.0",
  "frequenz-repo-config[lib] == 0.7.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "frequenz-channels"
description = "Channel implementations for Python"
readme = "README.md"
license = { text = "MIT" }
keywords = ["frequenz", "python", "lib", "library", "channels", "channel"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
requires-python = ">= 3.11, < 4"
dependencies = [
  "typing-extensions >= 4.5.0, < 5",
  "watchfiles >= 0.15.0, < 0.22.0",
]
dynamic = ["version"]

[[project.authors]]
name = "Frequenz Energy-as-a-Service GmbH"
email = "floss@frequenz.com"

[project.optional-dependencies]
dev-flake8 = [
  "flake8 == 6.1.0",
  "flake8-docstrings == 1.7.0",
  "flake8-pyproject == 1.2.3",  # For reading the flake8 config from pyproject.toml
  "pydoclint == 0.3.2",
  "pydocstyle == 6.3.0",
]
dev-formatting = ["black == 23.10.1", "isort == 5.12.0"]
dev-mkdocs = [
  "black == 23.10.1",
  "Markdown==3.4.4",
  "mike == 1.1.2",
  "mkdocs-gen-files == 0.5.0",
  "mkdocs-literate-nav == 0.6.1",
  "mkdocs-material == 9.3.2",
  "mkdocs-macros-plugin == 1.0.4",
  "mkdocstrings[python] == 0.23.0",
  "frequenz-repo-config[lib] == 0.7.2",
]
dev-mypy = [
  "mypy == 1.6.1",
  "types-Markdown == 3.4.2.10",
  # For checking the noxfile, docs/ script, and tests
  "frequenz-channels[dev-mkdocs,dev-noxfile,dev-pytest]",
]
dev-noxfile = ["nox == 2023.4.22", "frequenz-repo-config[lib] == 0.7.2"]
dev-pylint = [
  "pylint == 2.17.7",
  # For checking the noxfile, docs/ script, and tests
  "frequenz-channels[dev-mkdocs,dev-noxfile,dev-pytest]",
]
dev-pytest = [
  "pytest == 7.4.3",
  "async-solipsism == 0.5",
  "hypothesis == 6.88.1",
  "frequenz-repo-config[extra-lint-examples] == 0.7.2",
  "pytest-asyncio == 0.21.1",
  "pytest-mock == 3.12.0",
]
dev = [
  "frequenz-channels[dev-mkdocs,dev-flake8,dev-formatting,dev-mkdocs,dev-mypy,dev-noxfile,dev-pylint,dev-pytest]",
]

[project.urls]
Documentation = "https://frequenz-floss.github.io/frequenz-channels-python/"
Changelog = "https://github.com/frequenz-floss/frequenz-channels-python/releases"
Issues = "https://github.com/frequenz-floss/frequenz-channels-python/issues"
Repository = "https://github.com/frequenz-floss/frequenz-channels-python"
Support = "https://github.com/frequenz-floss/frequenz-channels-python/discussions/categories/support"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["benchmarks", "examples", "src", "tests"]

[tool.flake8]
# We give some flexibility to go over 88, there are cases like long URLs or
# code in documenation that have extra indentation. Black will still take care
# of making everything that can be 88 wide, 88 wide.
max-line-length = 100
extend-ignore = [
  "E203", # Whitespace before ':' (conflicts with black)
  "W503", # Line break before binary operator (conflicts with black)
]
# pydoclint options
style = "google"
check-return-types = false
check-yield-types = false
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
allow-init-docstring = true

[tool.pylint.similarities]
ignore-comments = ['yes']
ignore-docstrings = ['yes']
ignore-imports = ['no']
min-similarity-lines = 40

[tool.pylint.messages_control]
disable = [
  "too-few-public-methods",
  # disabled because it conflicts with isort
  "wrong-import-order",
  "ungrouped-imports",
  # pylint's unsubscriptable check is buggy and is not needed because
  # it is a type-check, for which we already have mypy.
  "unsubscriptable-object",
  # Checked by flake8
  "line-too-long",
  "unused-variable",
  "unnecessary-lambda-assignment",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"
required_plugins = ["pytest-asyncio", "pytest-mock"]
markers = [
  "integration: integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
# This option disables mypy cache, and it is sometimes useful to enable it if
# you are getting weird intermittent error, or error in the CI but not locally
# (or vice versa). In particular errors saying that type: ignore is not
# used but getting the original ignored error when removing the type: ignore.
# See for example: https://github.com/python/mypy/issues/2960
#no_incremental = true
packages = ["frequenz.channels"]
strict = true

[[tool.mypy.overrides]]
module = [
  "async_solipsism",
  "async_solipsism.*",
  "mkdocs_macros.*",
  "sybil",
  "sybil.*",
]
ignore_missing_imports = true

[tool.setuptools_scm]
version_scheme = "post-release"
