[metadata]
name = frequenz-channels
author = Frequenz Energy-as-a-Service GmbH

[options]
install_requires =
    watchfiles >= 0.15.0

package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.8, < 4

[options.package_data]
frequenz.channels = py.typed

[options.packages.find]
where = src
